# RTOS-Fitness-Monitor

./: .gitignore  Doxyfile  README.md
docs/: RTOS-implementation.md  acceptance-tests.md  architecture-justification.md  demo-presentation.md  fitness-monitor-v1-overview.md  fitness-monitor-v2-features.md  fitness-monitor-v2-overview.md  fitness-monitor-v2-spec.md  overview.md
docs/images/: Display-Sate-Machine.excalidraw  Display-State-Machine.excalidraw  RTOS-overview.excalidraw  adapter_pattern.excalidraw  comms-umls.excalidraw  state_pattern.excalidraw  version1-structure.excalidraw  version2-structure.excalidraw
labs/guide3-unit-testing/: test_circular_buffer.c
labs/guide4-mocks/: test_adc.c
labs/guide4-mocks/mocks/: circBufT_mock.h
tests/: CMakeLists.txt  test_IO_input.c  test_accl_hal.c  test_accl_handler.c  test_accl_manager.c  test_adc.c  test_adc_hal.c  test_adc_handler.c  test_button_manager.h  test_circular_buffer.c  test_clock_hal.c  test_device_info.c  test_device_manager.c  test_display.c  test_display_hal.c  test_display_info.c  test_display_manager.c  test_i2c_hal.c  test_input_comms.c  test_input_hal.c  test_input_manager.c  test_pot_comms.c  test_pot_manager.c  test_step_counter.c  test_step_counter_comms.c  test_step_counter_manager.c
tests/mocks/: IO_input_mock.h  OrbitOLEDInterface_mock.h  accl_hal_mock.h  accl_handler_mock.h  accl_manager_mock.h  adc_hal_mock.h  adc_handler_mock.h  adc_manager_mock.h  circBufT_mock.h  circular_buffer_mock.h  i2c_driver_mock.h  input_comms_mock.h  input_hal_mock.h  math_mock.h  queue_mock.h  step_counter_comms_mock.h  step_counter_mock.h  vector3_mock.h
tests/mocks/comms_mocks/: input_comms_mock.h  pot_comms_mock.h  step_counter_comms_mock.h
tests/mocks/freertos_mocks/: queue_mock.h  semphr_mock.h  task_mock.h
tests/mocks/hal_mocks/: accl_hal_mock.h  adc_hal_mock.h  i2c_hal_mock.h  input_hal_mock.h
tests/mocks/tiva_mocks/: adc_mock.h  gpio_mock.h  i2c_mock.h  sysctl_mock.h  tm4c123gh6pm_mock.h  ustdlib_mock.h
tests/mocks/utility_mocks/: circular_buffer_mock.h  vector3_mock.h
